# Nmap Changelog ($Id$); -*-text-*-

o Added a new NSE Unpwdb (username/password database) library for easily
  obtaining usernames or passwords from a list.  The functions usernames()
  and passwords() return a closure which returns a new list entry with
  every call, or nil when the list is exhausted.  You can specify your
  own username and/or password lists via the script arguments userdb
  and passdb, respectively. [Kris]

o The Ports/Hosts display in Zenmap now has different colors for open
  and closed ports. [Vladimir]

o Fixed the "resolution errors not showing up" bug. Actually, from now
  on, all errors will be displayed properly in the Zenmap window, since
  stderr is also redirected there (until now, only stdout was
  displayed). [Vladimir]

o NSE now works with the Ping Scan (-sP) to execute host scripts. [Kris]

o [NSE] nse_string has been removed and equivalent, cleaner, procedures
  have been moved to nse_main and nse_nsock. [Patrick]

o [NSE] Case insensitive categories. [Patrick]

o [NSE] Porttests and Hosttests tables are now in the Lua registry where
  they belong. [Patrick]

o [NSE] Each thread for a script gets its own action closure (and
    upvalues). See: http://seclists.org/nmap-dev/2008/q2/0549.html [Patrick]

o [NSE] script_scan_result structure has been changed to a class,
  ScriptResult, that now uses std::strings to hold a Script's output and
  id. This alleviates the need to manage memory on the heap explicitly
  (malloc & free). [Patrick]

o [NSE] The runlevel structure has been placed in the thread record structure
  so we no longer need to manage the runlevel explicitly on the heap. [Patrick]

Nmap 4.68 [2008-6-28]

o Doug integrated all of your version detection submissions and
  corrections for the year up to May 31.  There were more than 1,000
  new submissions and 18 corrections.  Please keep them coming!  And
  don't forget that corrections are very important, so do submit them